[tool.poetry]
name = "python-observer"
version = "0.2.0"
description = "Live reload for Python apps"
authors = ["Skyascii <savioxavier112@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "python_observer/**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.3.4"
humanfriendly = "^10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
observer = "python_observer.cli:main"
